chore: upgrade to freeway 1.3.6-SNAPSHOT with adapter audit fixes
- Upgrade Freeway core to 1.3.6-SNAPSHOT (re-pulled build 6) and third-party deps to latest stable: Undertow 2.4.2.Final, Jetty 12.1.11, Kafka 4.3.1, HikariCP 7.1.0, SQLite JDBC 3.53.2.1, H2 2.4.240, JUnit 6.1.2, SLF4J 2.0.18; centralize versions in root POM
- Fix bench CLI startup crash: disable SPI auto-discovery, install DbModule explicitly, register freeway.http.server ordering anchor; dispatch returns status so app shuts down cleanly on unknown commands
- Fix BenchRunner percentiles (success-only samples), switch to virtual threads, validate ws mode, count timed-out requests as errors
- Kafka: event-type allowlist (default deny), poison-policy skip/fail, tombstone handling, close race fix, parse-once config, container-level @Value injection test
- HTTP adapters: HEAD Content-Length per RFC 7231, lower-case header snapshots, Undertow worker dispatch + millisecond shutdown, committed-response-safe 500 handling, async WebSocket sends, cached completion callbacks
- Hikari: report cumulative borrow wait time, guard stats after close
- Add Jetty/Undertow contract tests, Kafka unit tests, HttpClient timeouts; update README/CHANGELOG/CLAUDE.md